# abusify

./: .gitignore  README.md  example.py  pyproject.toml  pytest.ini
example_notebooks/: getting_started.ipynb
src/abusify/: __init__.py  abusify.py  downloader.py  exceptions.py  init_logging.py  organizer.py  resolver.py  spotify.py
tests/: .cache  conftest.py  test_abusify_live.py  test_downloader.py  test_downloader_live.py  test_resolve.py  test_resolve_live.py
